inline social media buttons into controls to prevent uneven margins b/n control buttons, added about button

--- a/src/components/shelf/Shelf.css
+++ b/src/components/shelf/Shelf.css
@@ -30,6 +30,7 @@
   padding: .5em 1em;
   font-family: inherit;
   border-radius: .2em;
+  user-select: none;
 }
 
 .lb-c-shelf__tab + .lb-c-shelf__tab {
